test/good/generators/generator01.px

func* counter(n: Int): Int def
    for i in 0... do
        if i >= n do
            return
        yield i

for x in counter(3) do
    print x
